fix: overflow-y: scroll; for current-post-input and z-index 1001 für close button in search-bar

--- a/src/app/overlay/search-results-current-post-input/search-results-current-post-input.component.scss
+++ b/src/app/overlay/search-results-current-post-input/search-results-current-post-input.component.scss
@@ -10,6 +10,7 @@
   border: 1px solid var(--color-purple-light-lines);
   -ms-overflow-style: none; // IE und Edge
   scrollbar-width: none;
+  overflow-y: scroll;
   &::-webkit-scrollbar {
     display: none; // Chrome, Safari, Opera
   }
