--- a/src/app/overlay/search-results/search-results.component.scss
+++ b/src/app/overlay/search-results/search-results.component.scss
@@ -12,7 +12,7 @@
 :host.overlay-web {
   border-radius: 0 30px 30px 30px;
   box-shadow: 0px 2px 10px 0px #00000014;
-  margin-top: -16px;
+  margin-top: -15px;
   margin-left: 43px;
   border: 1px solid #adb0d9;
 }
